--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.2",
+    "nodemailer": "^6.9.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "speakeasy": "^2.0.0",
     "tailwindcss": "^3.4.11",
     "web-vitals": "^2.1.4"
   },
